[gd_scene load_steps=3 format=2]

[ext_resource path="res://projectiles/projectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://projectiles/player_projectile.gd" type="Script" id=2]

[node name="PlayerProjectile" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Hitbox" parent="." index="1"]
collision_layer = 8

[connection signal="critically_hit_something" from="Hitbox" to="." method="_on_Hitbox_critically_hit_something"]
[connection signal="hit_something" from="Hitbox" to="." method="_on_Hitbox_hit_something"]

[editable path="Hitbox"]
